// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Button renders as an anchor tag 1`] = `
.c0 {
  font-family: inherit;
  font-weight: 600;
  -webkit-text-decoration: none;
  text-decoration: none;
  cursor: pointer;
  border: 1px solid;
  border-color: transparent;
  border-radius: 6.25rem;
  color: #FFFFFF;
  background-color: #0CD664;
  font-size: 0.875rem;
  line-height: 1rem;
  padding: 0.75rem 1.25rem;
}

.c0:disabled,
.c0[disabled] {
  cursor: not-allowed;
  opacity: 0.35;
}

.c0.is-hover:not([disabled]),
.c0:hover:not([disabled]) {
  background-color: #50E190;
}

.c0.is-active,
.c0.has-focus,
.c0:active,
.c0:focus {
  outline: none;
}

<a
  className="c0"
  href="#some-anchor"
  size="small"
>
  Primary Button (Anchor)
</a>
`;

exports[`Button renders as disabled 1`] = `
.c0 {
  font-family: inherit;
  font-weight: 600;
  -webkit-text-decoration: none;
  text-decoration: none;
  cursor: pointer;
  border: 1px solid;
  border-color: transparent;
  border-radius: 6.25rem;
  color: #FFFFFF;
  background-color: #0CD664;
  font-size: 0.875rem;
  line-height: 1rem;
  padding: 0.75rem 1.25rem;
}

.c0:disabled,
.c0[disabled] {
  cursor: not-allowed;
  opacity: 0.35;
}

.c0.is-hover:not([disabled]),
.c0:hover:not([disabled]) {
  background-color: #50E190;
}

.c0.is-active,
.c0.has-focus,
.c0:active,
.c0:focus {
  outline: none;
}

<button
  className="c0"
  disabled={true}
  size="small"
>
  Disabled Primary Button
</button>
`;

exports[`Button renders as fullWidth 1`] = `
.c0 {
  width: 100%;
  font-family: inherit;
  font-weight: 600;
  -webkit-text-decoration: none;
  text-decoration: none;
  cursor: pointer;
  border: 1px solid;
  border-color: transparent;
  border-radius: 6.25rem;
  position: relative;
  color: #FFFFFF;
  background-color: #0CD664;
  font-size: 0.875rem;
  line-height: 1rem;
  padding: 0.75rem 1.25rem;
}

.c0:disabled,
.c0[disabled] {
  cursor: not-allowed;
  opacity: 0.35;
}

.c0.is-hover:not([disabled]),
.c0:hover:not([disabled]) {
  background-color: #50E190;
}

.c0.is-active,
.c0.has-focus,
.c0:active,
.c0:focus {
  outline: none;
}

<button
  className="c0"
  size="small"
>
  Full Width Primary Button
</button>
`;

exports[`Button renders correctly 1`] = `
.c0 {
  font-family: inherit;
  font-weight: 600;
  -webkit-text-decoration: none;
  text-decoration: none;
  cursor: pointer;
  border: 1px solid;
  border-color: transparent;
  border-radius: 6.25rem;
  color: #FFFFFF;
  background-color: #0CD664;
  font-size: 0.875rem;
  line-height: 1rem;
  padding: 0.75rem 1.25rem;
}

.c0:disabled,
.c0[disabled] {
  cursor: not-allowed;
  opacity: 0.35;
}

.c0.is-hover:not([disabled]),
.c0:hover:not([disabled]) {
  background-color: #50E190;
}

.c0.is-active,
.c0.has-focus,
.c0:active,
.c0:focus {
  outline: none;
}

<button
  className="c0"
  size="small"
>
  Primary Button
</button>
`;

exports[`Button renders rounded 1`] = `
.c0 {
  font-family: inherit;
  font-weight: 600;
  -webkit-text-decoration: none;
  text-decoration: none;
  text-transform: uppercase;
  cursor: pointer;
  border: 1px solid;
  border-color: transparent;
  border-radius: 6.25rem;
  color: #FFFFFF;
  background-color: #0CD664;
  font-size: 0.875rem;
  line-height: 1rem;
  padding: 0.75rem 1.25rem;
}

.c0:disabled,
.c0[disabled] {
  cursor: not-allowed;
  opacity: 0.35;
}

.c0.is-hover:not([disabled]),
.c0:hover:not([disabled]) {
  background-color: #50E190;
}

.c0.is-active,
.c0.has-focus,
.c0:active,
.c0:focus {
  outline: none;
}

<button
  className="c0"
  size="small"
>
  Round Primary Button
</button>
`;

exports[`Button renders uppercased 1`] = `
.c0 {
  font-family: inherit;
  font-weight: 600;
  -webkit-text-decoration: none;
  text-decoration: none;
  text-transform: uppercase;
  cursor: pointer;
  border: 1px solid;
  border-color: transparent;
  border-radius: 6.25rem;
  color: #FFFFFF;
  background-color: #0CD664;
  font-size: 0.875rem;
  line-height: 1rem;
  padding: 0.75rem 1.25rem;
}

.c0:disabled,
.c0[disabled] {
  cursor: not-allowed;
  opacity: 0.35;
}

.c0.is-hover:not([disabled]),
.c0:hover:not([disabled]) {
  background-color: #50E190;
}

.c0.is-active,
.c0.has-focus,
.c0:active,
.c0:focus {
  outline: none;
}

<button
  className="c0"
  size="small"
>
  Uppercase Primary Button
</button>
`;

exports[`Button variants renders as highlight 1`] = `
.c0 {
  font-family: inherit;
  font-weight: 600;
  -webkit-text-decoration: none;
  text-decoration: none;
  cursor: pointer;
  border: 1px solid;
  border-color: transparent;
  border-radius: 6.25rem;
  color: #FFFFFF;
  background-color: #0F75BD;
  font-size: 0.875rem;
  line-height: 1rem;
  padding: 0.75rem 1.25rem;
}

.c0:disabled,
.c0[disabled] {
  cursor: not-allowed;
  opacity: 0.35;
}

.c0.is-hover:not([disabled]),
.c0:hover:not([disabled]) {
  background-color: #2783C4;
}

.c0.is-active,
.c0.has-focus,
.c0:active,
.c0:focus {
  background-color: #0F75BD;
  outline: none;
}

<button
  className="c0"
  size="small"
>
  Secondary Button
</button>
`;

exports[`Button variants renders as optional 1`] = `
.c0 {
  font-family: inherit;
  font-weight: 600;
  -webkit-text-decoration: none;
  text-decoration: none;
  cursor: pointer;
  border: 1px solid;
  border-color: transparent;
  border-radius: 6.25rem;
  color: #8697A2;
  background-color: #31373F;
  font-size: 0.875rem;
  line-height: 1rem;
  padding: 0.75rem 1.25rem;
}

.c0:disabled,
.c0[disabled] {
  cursor: not-allowed;
  opacity: 0.35;
}

.c0.is-hover:not([disabled]),
.c0:hover:not([disabled]) {
  color: #FFFFFF;
}

.c0.is-active,
.c0.has-focus,
.c0:active,
.c0:focus {
  color: #FFFFFF;
  outline: none;
}

<button
  className="c0"
  size="small"
>
  Optional Button
</button>
`;

exports[`Button variants renders as primary 1`] = `
.c0 {
  font-family: inherit;
  font-weight: 600;
  -webkit-text-decoration: none;
  text-decoration: none;
  cursor: pointer;
  border: 1px solid;
  border-color: transparent;
  border-radius: 6.25rem;
  color: #FFFFFF;
  background-color: #0CD664;
  font-size: 0.875rem;
  line-height: 1rem;
  padding: 0.75rem 1.25rem;
}

.c0:disabled,
.c0[disabled] {
  cursor: not-allowed;
  opacity: 0.35;
}

.c0.is-hover:not([disabled]),
.c0:hover:not([disabled]) {
  background-color: #50E190;
}

.c0.is-active,
.c0.has-focus,
.c0:active,
.c0:focus {
  outline: none;
}

<button
  className="c0"
  size="small"
>
  Primary Button
</button>
`;

exports[`Button variants renders as secondary 1`] = `
.c0 {
  font-family: inherit;
  font-weight: 600;
  -webkit-text-decoration: none;
  text-decoration: none;
  cursor: pointer;
  border: 1px solid;
  border-color: transparent;
  border-radius: 6.25rem;
  color: #FFFFFF;
  background-color: #1A212A;
  font-size: 0.875rem;
  line-height: 1rem;
  padding: 0.75rem 1.25rem;
}

.c0:disabled,
.c0[disabled] {
  cursor: not-allowed;
  opacity: 0.35;
}

.c0.is-hover:not([disabled]),
.c0:hover:not([disabled]) {
  background-color: #31373F;
}

.c0.is-active,
.c0.has-focus,
.c0:active,
.c0:focus {
  background-color: #1A212A;
  outline: none;
}

<button
  className="c0"
  size="small"
>
  Optional Button
</button>
`;

exports[`Button variants variants MockStates Highlight outline renders as active 1`] = `
.c0 {
  font-family: inherit;
  font-weight: 600;
  -webkit-text-decoration: none;
  text-decoration: none;
  cursor: pointer;
  border: 1px solid;
  border-color: transparent;
  border-radius: 6.25rem;
  color: #FFFFFF;
  background-color: #0F75BD;
  font-size: 0.875rem;
  line-height: 1rem;
  padding: 0.75rem 1.25rem;
}

.c0:disabled,
.c0[disabled] {
  cursor: not-allowed;
  opacity: 0.35;
}

.c0.is-hover:not([disabled]),
.c0:hover:not([disabled]) {
  background-color: #2783C4;
}

.c0.is-active,
.c0.has-focus,
.c0:active,
.c0:focus {
  background-color: #0F75BD;
  outline: none;
}

<button
  className="c0 is-active"
  size="small"
>
  Active Primary Button
</button>
`;

exports[`Button variants variants MockStates Highlight renders as active 1`] = `
.c0 {
  font-family: inherit;
  font-weight: 600;
  -webkit-text-decoration: none;
  text-decoration: none;
  cursor: pointer;
  border: 1px solid;
  border-color: transparent;
  border-radius: 6.25rem;
  color: #FFFFFF;
  background-color: #0F75BD;
  font-size: 0.875rem;
  line-height: 1rem;
  padding: 0.75rem 1.25rem;
}

.c0:disabled,
.c0[disabled] {
  cursor: not-allowed;
  opacity: 0.35;
}

.c0.is-hover:not([disabled]),
.c0:hover:not([disabled]) {
  background-color: #2783C4;
}

.c0.is-active,
.c0.has-focus,
.c0:active,
.c0:focus {
  background-color: #0F75BD;
  outline: none;
}

<button
  className="c0 is-active"
  size="small"
>
  Active Highlight Button
</button>
`;

exports[`Button variants variants MockStates Highlight renders with hover 1`] = `
.c0 {
  font-family: inherit;
  font-weight: 600;
  -webkit-text-decoration: none;
  text-decoration: none;
  cursor: pointer;
  border: 1px solid;
  border-color: transparent;
  border-radius: 6.25rem;
  color: #FFFFFF;
  background-color: #0F75BD;
  font-size: 0.875rem;
  line-height: 1rem;
  padding: 0.75rem 1.25rem;
}

.c0:disabled,
.c0[disabled] {
  cursor: not-allowed;
  opacity: 0.35;
}

.c0.is-hover:not([disabled]),
.c0:hover:not([disabled]) {
  background-color: #2783C4;
}

.c0.is-active,
.c0.has-focus,
.c0:active,
.c0:focus {
  background-color: #0F75BD;
  outline: none;
}

<button
  className="c0 is-hover"
  size="small"
>
  Hover Highlight Button
</button>
`;

exports[`Button variants variants MockStates Optional renders as active 1`] = `
.c0 {
  font-family: inherit;
  font-weight: 600;
  -webkit-text-decoration: none;
  text-decoration: none;
  cursor: pointer;
  border: 1px solid;
  border-color: transparent;
  border-radius: 6.25rem;
  color: #8697A2;
  background-color: #31373F;
  font-size: 0.875rem;
  line-height: 1rem;
  padding: 0.75rem 1.25rem;
}

.c0:disabled,
.c0[disabled] {
  cursor: not-allowed;
  opacity: 0.35;
}

.c0.is-hover:not([disabled]),
.c0:hover:not([disabled]) {
  color: #FFFFFF;
}

.c0.is-active,
.c0.has-focus,
.c0:active,
.c0:focus {
  color: #FFFFFF;
  outline: none;
}

<button
  className="c0 is-active"
  size="small"
>
  Active Optional Button
</button>
`;

exports[`Button variants variants MockStates Optional renders as active 2`] = `
.c0 {
  font-family: inherit;
  font-weight: 600;
  -webkit-text-decoration: none;
  text-decoration: none;
  cursor: pointer;
  border: 1px solid;
  border-color: transparent;
  border-radius: 6.25rem;
  color: #8697A2;
  background-color: #31373F;
  font-size: 0.875rem;
  line-height: 1rem;
  padding: 0.75rem 1.25rem;
}

.c0:disabled,
.c0[disabled] {
  cursor: not-allowed;
  opacity: 0.35;
}

.c0.is-hover:not([disabled]),
.c0:hover:not([disabled]) {
  color: #FFFFFF;
}

.c0.is-active,
.c0.has-focus,
.c0:active,
.c0:focus {
  color: #FFFFFF;
  outline: none;
}

<button
  className="c0 is-active"
  size="small"
>
  Active Optional Button
</button>
`;

exports[`Button variants variants MockStates Optional renders with hover 1`] = `
.c0 {
  font-family: inherit;
  font-weight: 600;
  -webkit-text-decoration: none;
  text-decoration: none;
  cursor: pointer;
  border: 1px solid;
  border-color: transparent;
  border-radius: 6.25rem;
  color: #8697A2;
  background-color: #31373F;
  font-size: 0.875rem;
  line-height: 1rem;
  padding: 0.75rem 1.25rem;
}

.c0:disabled,
.c0[disabled] {
  cursor: not-allowed;
  opacity: 0.35;
}

.c0.is-hover:not([disabled]),
.c0:hover:not([disabled]) {
  color: #FFFFFF;
}

.c0.is-active,
.c0.has-focus,
.c0:active,
.c0:focus {
  color: #FFFFFF;
  outline: none;
}

<button
  className="c0 is-hover"
  size="small"
>
  Hover Optional Button
</button>
`;

exports[`Button variants variants MockStates Optional renders with hover 2`] = `
.c0 {
  font-family: inherit;
  font-weight: 600;
  -webkit-text-decoration: none;
  text-decoration: none;
  cursor: pointer;
  border: 1px solid;
  border-color: transparent;
  border-radius: 6.25rem;
  color: #8697A2;
  background-color: #31373F;
  font-size: 0.875rem;
  line-height: 1rem;
  padding: 0.75rem 1.25rem;
}

.c0:disabled,
.c0[disabled] {
  cursor: not-allowed;
  opacity: 0.35;
}

.c0.is-hover:not([disabled]),
.c0:hover:not([disabled]) {
  color: #FFFFFF;
}

.c0.is-active,
.c0.has-focus,
.c0:active,
.c0:focus {
  color: #FFFFFF;
  outline: none;
}

<button
  className="c0 is-hover"
  size="small"
>
  Hover Optional Button
</button>
`;

exports[`Button variants variants MockStates Primary renders as active 1`] = `
.c0 {
  font-family: inherit;
  font-weight: 600;
  -webkit-text-decoration: none;
  text-decoration: none;
  cursor: pointer;
  border: 1px solid;
  border-color: transparent;
  border-radius: 6.25rem;
  color: #FFFFFF;
  background-color: #0CD664;
  font-size: 0.875rem;
  line-height: 1rem;
  padding: 0.75rem 1.25rem;
}

.c0:disabled,
.c0[disabled] {
  cursor: not-allowed;
  opacity: 0.35;
}

.c0.is-hover:not([disabled]),
.c0:hover:not([disabled]) {
  background-color: #50E190;
}

.c0.is-active,
.c0.has-focus,
.c0:active,
.c0:focus {
  outline: none;
}

<button
  className="c0 is-active"
  size="small"
>
  Active Primary Button
</button>
`;

exports[`Button variants variants MockStates Primary renders with hover 1`] = `
.c0 {
  font-family: inherit;
  font-weight: 600;
  -webkit-text-decoration: none;
  text-decoration: none;
  cursor: pointer;
  border: 1px solid;
  border-color: transparent;
  border-radius: 6.25rem;
  color: #FFFFFF;
  background-color: #0CD664;
  font-size: 0.875rem;
  line-height: 1rem;
  padding: 0.75rem 1.25rem;
}

.c0:disabled,
.c0[disabled] {
  cursor: not-allowed;
  opacity: 0.35;
}

.c0.is-hover:not([disabled]),
.c0:hover:not([disabled]) {
  background-color: #50E190;
}

.c0.is-active,
.c0.has-focus,
.c0:active,
.c0:focus {
  outline: none;
}

<button
  className="c0 is-hover"
  size="small"
>
  Hover Primary Button
</button>
`;

exports[`Button variants variants MockStates Secondary renders as active 1`] = `
.c0 {
  font-family: inherit;
  font-weight: 600;
  -webkit-text-decoration: none;
  text-decoration: none;
  cursor: pointer;
  border: 1px solid;
  border-color: transparent;
  border-radius: 6.25rem;
  color: #FFFFFF;
  background-color: #1A212A;
  font-size: 0.875rem;
  line-height: 1rem;
  padding: 0.75rem 1.25rem;
}

.c0:disabled,
.c0[disabled] {
  cursor: not-allowed;
  opacity: 0.35;
}

.c0.is-hover:not([disabled]),
.c0:hover:not([disabled]) {
  background-color: #31373F;
}

.c0.is-active,
.c0.has-focus,
.c0:active,
.c0:focus {
  background-color: #1A212A;
  outline: none;
}

<button
  className="c0 is-active"
  size="small"
>
  Active Secondary Button
</button>
`;

exports[`Button variants variants MockStates Secondary renders as active 2`] = `
.c0 {
  font-family: inherit;
  font-weight: 600;
  -webkit-text-decoration: none;
  text-decoration: none;
  cursor: pointer;
  border: 1px solid;
  border-color: transparent;
  border-radius: 6.25rem;
  color: #FFFFFF;
  background-color: #1A212A;
  font-size: 0.875rem;
  line-height: 1rem;
  padding: 0.75rem 1.25rem;
}

.c0:disabled,
.c0[disabled] {
  cursor: not-allowed;
  opacity: 0.35;
}

.c0.is-hover:not([disabled]),
.c0:hover:not([disabled]) {
  background-color: #31373F;
}

.c0.is-active,
.c0.has-focus,
.c0:active,
.c0:focus {
  background-color: #1A212A;
  outline: none;
}

<button
  className="c0 is-active"
  size="small"
>
  Active Primary Button
</button>
`;

exports[`Button variants variants MockStates Secondary renders with hover 1`] = `
.c0 {
  font-family: inherit;
  font-weight: 600;
  -webkit-text-decoration: none;
  text-decoration: none;
  cursor: pointer;
  border: 1px solid;
  border-color: transparent;
  border-radius: 6.25rem;
  color: #FFFFFF;
  background-color: #1A212A;
  font-size: 0.875rem;
  line-height: 1rem;
  padding: 0.75rem 1.25rem;
}

.c0:disabled,
.c0[disabled] {
  cursor: not-allowed;
  opacity: 0.35;
}

.c0.is-hover:not([disabled]),
.c0:hover:not([disabled]) {
  background-color: #31373F;
}

.c0.is-active,
.c0.has-focus,
.c0:active,
.c0:focus {
  background-color: #1A212A;
  outline: none;
}

<button
  className="c0 is-hover"
  size="small"
>
  Hover Secondary Button
</button>
`;

exports[`Button variants variants MockStates Secondary renders with hover 2`] = `
.c0 {
  font-family: inherit;
  font-weight: 600;
  -webkit-text-decoration: none;
  text-decoration: none;
  cursor: pointer;
  border: 1px solid;
  border-color: transparent;
  border-radius: 6.25rem;
  color: #FFFFFF;
  background-color: #1A212A;
  font-size: 0.875rem;
  line-height: 1rem;
  padding: 0.75rem 1.25rem;
}

.c0:disabled,
.c0[disabled] {
  cursor: not-allowed;
  opacity: 0.35;
}

.c0.is-hover:not([disabled]),
.c0:hover:not([disabled]) {
  background-color: #31373F;
}

.c0.is-active,
.c0.has-focus,
.c0:active,
.c0:focus {
  background-color: #1A212A;
  outline: none;
}

<button
  className="c0 is-hover"
  size="small"
>
  Hover Primary Button
</button>
`;
